--- a/CursosDjango/contenido/templates/contenido/principal.html
+++ b/CursosDjango/contenido/templates/contenido/principal.html
@@ -1,7 +1,30 @@
 {% extends 'contenido/encabezabo.html' %}
 {% block titulo %}Principal{% endblock titulo %}
+
+{% block imagen %}
+{% load static %}
+{%static 'contenido/imagenes/home.png' %}
+{% endblock  %}
+
 {% block  contenido%}
-<h1>Mensaje de bienvenida</h1>
-    <p>Mensaje</p>
-    <p>descripcion</p>
+<section class="resume-section" id="about">
+    <div class="resume-section-content">
+        <h1 class="mb-0">
+            Titulo
+            <span class="text-primary">titulo</span>
+        </h1>
+        <div class="subheading mb-5">
+            CONTENIDO
+            <a href="mailto:name@email.com">name@email.com</a>
+        </div>
+        <p class="lead mb-5">contenido</p>
+        <div class="social-icons">
+            <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
+            <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+            <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
+            <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+        </div>
+    </div>
+</section>
+
 {% endblock  %}
