--- a/CursosDjango/contenido/templates/contenido/encabezabo.html
+++ b/CursosDjango/contenido/templates/contenido/encabezabo.html
@@ -1,13 +1,36 @@
 <html lang="es">
 <head>
 <title>{% block titulo %}{% endblock titulo %}</title>
+
+{%load static%}
+
+<link href="{% static 'contenido/css/styles.css'%}" rel="stylesheet" type="text/css">
+<link href="{% static 'contenido/css/formulario.css'%}" rel="stylesheet" type="text/css">
+<script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+<link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+<link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
-    {% url 'principal' %}
-<!--MENÚ-->
-<a href=" {% url 'principal' %}">Home</a>
-<a href=" {% url 'registro' %}">Registrar</a>
-<a href="{% url 'cursos' %}">Cursos</a>
+    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+            <span class="d-block d-lg-none">Clarence Taylor</span>
+            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="{% block imagen %}{%endblock%}" alt="..." /></span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'principal' %}">Principal</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'cursos' %}">Cursos</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'registro' %}">Contactanos</a></li>
+                	
+                
+            </ul>
+        </div>
+    </nav>
+
+    
 <!-- CONTENIDO -->
 {% block contenido %} <!--Template Tag-->
 <!--block sirve para indicar que colocaremos un bloque de
