--- a/CursosDjango/Cursos/templates/cursos/principal.html
+++ b/CursosDjango/Cursos/templates/cursos/principal.html
@@ -11,8 +11,8 @@
 <section class="resume-section" id="about">
     <div class="resume-section-content">
         <h1 class="mb-0">
-            Titulo
-            <span class="text-primary">titulo</span>
+            Lista
+            <span class="text-primary">De curso</span>
         </h1>
         <div class="subheading mb-5">
             CONTENIDO
@@ -50,7 +50,7 @@
         </table>
         <div class="social-icons">
             <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-            <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+            <a class="social-icon" href="https://github.com/Vidaguilar/Repositorio-CursoDjango"><i class="fab fa-github"></i></a>
             <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
             <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
         </div>
